<resources>
    <string name="app_name">Motion Cam</string>
    <string name="light">Light</string>
    <string name="shadows">Shadows</string>
    <string name="highlights">Highlights</string>
    <string name="contrast">Contrast</string>
    <string name="black_point">Black Point</string>
    <string name="exposure">Exposure</string>
    <string name="saturation">Saturation</string>
    <string name="white_balance">White Balance</string>
    <string name="temperature">Temperature</string>
    <string name="tint">Tint</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="color">Color</string>
    <string name="as_shot">As Shot</string>
    <string name="merge_images">Merge Images</string>
    <string name="additional_noise_reduction">Additional Noise Reduction</string>
    <string name="denoise">Noise Reduction</string>
    <string name="detail">Detail</string>
    <string name="sharpness">Sharpness</string>
    <string name="pop">Pop</string>
    <string name="info">Information</string>
    <string name="shutter_speed">Shutter Speed:</string>
    <string name="iso">ISO:</string>
    <string name="manual_controls">Exposure</string>
    <string name="denoise_auto">Auto</string>
    <string name="denoise_off">Off</string>
    <string name="denoise_normal">Normal</string>
    <string name="denoise_aggressive">High</string>
    <string name="title_activity_test">Test</string>
    <string name="history">History</string>
    <string name="memory_use_description">The maximum amount of memory to use when capturing images from the camera.</string>
    <string name="raw_video_memory_use_description">The maximum amount of memory to use when capturing RAW video from the camera.\nWARNING: Allocating too much memory will cause the app to crash.</string>
    <string name="camera_preview_quality_description">The quality of the camera preview. Higher quality requires more GPU resources.</string>
    <string name="camera_profile">Camera Profile</string>
    <string name="camera_profile_description">The camera profile describes the default settings to use for captured images.</string>
    <string name="general">General</string>
    <string name="memory_usage">Memory Usage</string>
    <string name="raw_video_memory_usage">RAW Video Memory Usage</string>
    <string name="camera_preview_quality">Camera Preview Quality</string>
    <string name="overall_saturation">Overall Saturation</string>
    <string name="greens">Greens</string>
    <string name="blues">Blues</string>
    <string name="jpeg_quality_description">JPEG quality to use when saving images.</string>
    <string name="jpeg_quality">JPEG Quality</string>
    <string name="temperature_offset">Temperature Offset</string>
    <string name="tint_offset">Tint Offset</string>
    <string name="alternative_ae">Alternative AE</string>
    <string name="enable_debug_mode">Enable debug mode</string>
    <string name="debug_mode">Debug mode</string>
    <string name="debug_mode_help">Turn this option on to leave unprocessed files on the filesystem</string>
    <string name="error">Error</string>
    <string name="not_supported_error">Your device does not support RAW capture.</string>
    <string name="capture_failed">There was an error trying to capture the image.</string>
    <string name="camera_error">The camera encountered an error.</string>
    <string name="ok">OK</string>
    <string name="hdr">HDR</string>
    <string name="burst">Burst</string>
    <string name="dual_exposure">Dual Exposure Controls</string>
    <string name="dual_exposure_help">Enable an accurate preview of the camera output. This enables dual exposure control.</string>
    <string name="enable_dual_exposure">Enable dual exposure controls</string>
    <string name="hint_text">NEW! Enable dual exposure controls in the settings.</string>
    <string name="hdr_settings_description">The amount to underexpose. Higher values lead to better highlight recovery but may lead to unrealistic looking images.</string>
    <string name="capture_mode_description">Select RAW10 unless the camera does not behave correctly. RAW16 is not recommended for RAW video. It uses significantly more bandwidth without increasing the dynamic range in almost all cases.</string>
    <string name="raw10">RAW10</string>
    <string name="raw12">RAW12</string>
    <string name="raw16">RAW16</string>
    <string name="photo_mode">PHOTO</string>
    <string name="night_mode">NIGHT</string>
    <string name="burst_mode">BURST</string>
    <string name="raw_video_mode">RAW VIDEO</string>
    <string name="processing">Processing</string>
    <string name="send_to">Send To</string>
    <string name="automatic_night_mode">Automatic night mode</string>
    <string name="enable_automatic_night_mode">Enable automatic night mode</string>
    <string name="automatically_switch_to_night_mode">Automatically switch to night mode</string>
    <string name="capture_mode">Capture Mode</string>
    <string name="value_percent">%1$d%%</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="adjustments">PROFILE</string>
    <string name="dng">DNG</string>
    <string name="preview_contrast">Contrast</string>
    <string name="preview_colour">Colour</string>
    <string name="preview_tint">Tint</string>
    <string name="preview_warmth">Warmth</string>
    <string name="no_videos_available">No videos available</string>
    <string name="video_merge_frames_desc">Reduce noise by merging the nearest frames together. This can provide a significant reduction in noise but will increase the conversion time.</string>
    <string name="video_merge_frames_title">Number of frames to stack:</string>
    <string name="capture_time">Capture Time</string>
    <string name="total_frames">Total Frames</string>
    <string name="manage_videos">MANAGE VIDEOS</string>
    <string name="corrupted_video">Corrupted video :(</string>
    <string name="queued">Queued</string>
    <string name="crop">CROP</string>
    <string name="output">OUTPUT</string>
    <string name="bin">BIN</string>
    <string name="fps">FPS</string>
    <string name="output_fps">OUTPUT FPS</string>
    <string name="size">SIZE</string>
    <string name="dropped_frames">DROPPED FRAMES</string>
    <string name="raw_video_storage_folder">RAW Video Storage Folder</string>
    <string name="raw_video_storage_folder_description">Where to store RAW videos during recording.</string>
    <string name="select">Select</string>
    <string name="video_memory_use_error" >Recording has stopped because the memory limit has been reached.</string>
    <string name="invalid_raw_video_folder">The selected output folder is not available. Using internal storage.</string>
    <string name="invalid_secondary_raw_video_folder">The secondary output folder is not available. RAW video will not be split.</string>
    <string name="recording_failed">Failed to start recording.</string>
    <string name="confirm_delete">Are you sure you want to delete this video?</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="convert_to_dng">Convert to DNG</string>
    <string name="please_wait">Please wait</string>
    <string name="saving_video">Saving video</string>
    <string name="processing_video">Processing Video</string>
    <string name="ae_lock">AE</string>
    <string name="af_lock">AF</string>
    <string name="awb_lock">AWB</string>
    <string name="ois">OIS</string>
    <string name="video_size">VIDEO SIZE:</string>
    <string name="device_storage">Device Storage:</string>
    <string name="memory_use">Memory Use:</string>
    <string name="this_video_has_been_exported">This video has been exported</string>
    <string name="video_parts_missing">This video has missing parts. It can\'t be converted.</string>
    <string name="ois_description">Enable optical image stabilisation</string>
    <string name="hdr_description">Capture HDR in photo mode</string>
    <string name="dng_description">Save DNG alongside JPEG</string>
    <string name="parts">Parts</string>
    <string name="delete_after_export">Delete after export</string>
    <string name="set_export_folder">Set export folder</string>
    <string name="split_storage_option">Split RAW video recording across two storage locations</string>
    <string name="split_storage_description">Splitting RAW storage across internal and external storage improves performance.</string>
    <string name="permissions_error">The app needs the camera permission to function.</string>
    <string name="exposure_clipping_overlay">Sensor Clipping Overlay</string>
    <string name="exposure_clipping_desc">Overlay areas where the sensor is clipping.</string>
    <string name="internal_mic_tag" translatable="false">_internal_mic</string>
    <string name="internal_mic">Internal Mic</string>
    <string name="supported_frame_rate">Supported Frame Rates</string>
    <string name="supported_frame_rate_desc">The following frame rates are reported to be available by your camera device.</string>
    <string name="unsupported_frame_rate">Unsupported Frame Rates</string>
    <string name="unsupported_frame_rate_desc">The following frame rates are not reported to be available by your camera device but may still work.</string>
    <string name="pixel_binning">Pixel Binning</string>
    <string name="pixel_binning_desc">Reduce output resolution by pixel binning</string>
    <string name="crop_width">Crop Width</string>
    <string name="crop_height">Crop Height</string>
    <string name="audio_input">Audio Input</string>
    <string name="support_page_text">Please visit https://github.com/mirsadm/motioncam for updates and support.</string>
    <string name="convert_page_support">Please visit https://github.com/mirsadm/motioncam for tools that can convert the container files on your PC.</string>
    <string name="raw_video_compression">RAW Video Lossless Compression</string>
    <string name="enable_raw_video_compression">Enable RAW video compression</string>
    <string name="raw_video_compression_desc">Compression can improve the output frame rate at the cost of extra CPU usage.</string>
    <string name="number_of_compression_threads">Number of Compression Threads</string>
    <string name="clear">Clear</string>
    <string name="correct_vignette">Correct vignette</string>
    <string name="move_to_export_folder">MOVE TO EXPORT FOLDER</string>
    <string name="intro">MotionCam requires a high end device with full support for RAW capture. This mode is not supported by many devices.\n\nFor support please visit:\n\n https://github.com/mirsadm/motioncam\n\nThe following phones have been tested:</string>
    <string name="start">Start</string>
    <string name="mic_system_default">System Default</string>
    <string name="mic_internal">Internal Mic</string>
    <string name="video_recovery_progress">Recovering corrupted video.</string>
    <string name="corrupted_video_warning">This video is corrupted. Some frames may be missing</string>
    <string name="cancel">Cancel</string>
    <string name="queue_all">Queue All</string>
</resources>
