<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
                android:text="@string/dng"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MotionCam.TextAppearance.Small"
                android:textColor="@color/silver"
                android:text="@string/dng_description"/>

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/saveDngBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
                android:text="@string/hdr"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MotionCam.TextAppearance.Small"
                android:textColor="@color/silver"
                android:text="@string/hdr_description"/>

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/hdrBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textAppearance="@style/MotionCam.TextAppearance.Medium.Bold"
        android:text="@string/camera_profile"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
        android:text="@string/contrast"/>

    <SeekBar
        android:id="@+id/contrastSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:padding="@dimen/seekBarPadding"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
        android:textColor="@color/white"
        android:text="@string/color"/>

    <SeekBar
        android:id="@+id/colorSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:padding="@dimen/seekBarPadding"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
        android:textColor="@color/white"
        android:text="@string/tint"/>

    <SeekBar
        android:id="@+id/tintSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:padding="@dimen/seekBarPadding"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
        android:textColor="@color/white"
        android:text="@string/preview_warmth"/>

    <SeekBar
        android:id="@+id/warmthSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:padding="@dimen/seekBarPadding"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
        android:textColor="@color/white"
        android:text="@string/sharpness"/>

    <SeekBar
        android:id="@+id/sharpnessSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:padding="@dimen/seekBarPadding"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
        android:textColor="@color/white"
        android:text="@string/detail"/>

    <SeekBar
        android:id="@+id/detailSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:padding="@dimen/seekBarPadding"/>

</LinearLayout>