<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
                android:text="@string/dng"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MotionCam.TextAppearance.Small"
                android:text="Save DNG along side JPEG"/>

        </LinearLayout>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
            android:layout_weight="1"
            android:text="@string/hdr"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/MotionCam.TextAppearance.Small"
        android:text="Capture HDR in photo mode"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
            android:layout_weight="1"
            android:text="@string/ois"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/MotionCam.TextAppearance.Small"
        android:text="Enable optical image stabilisation"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
        android:text="@string/camera_profile"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
        android:text="@string/contrast"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/seekBarPadding"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
        android:text="@string/color"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/seekBarPadding"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
        android:text="@string/tint"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/seekBarPadding"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
        android:text="@string/preview_warmth"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/seekBarPadding"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
        android:text="@string/sharpness"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/seekBarPadding"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
        android:text="@string/detail"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/seekBarPadding"/>

</LinearLayout>