<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
        android:layout_marginTop="15dp"
        android:text="@string/supported_frame_rate"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/MotionCam.TextAppearance.Small"
        android:textColor="@color/silver"
        android:text="@string/supported_frame_rate_desc"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/fpsGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
        android:layout_marginTop="15dp"
        android:text="@string/unsupported_frame_rate"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/MotionCam.TextAppearance.Small"
        android:textColor="@color/silver"
        android:text="@string/unsupported_frame_rate_desc"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/unsupportedFpsGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
                android:text="@string/pixel_binning"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MotionCam.TextAppearance.Small"
                android:textColor="@color/silver"
                android:text="@string/pixel_binning_desc"/>

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/pixelBinSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
        android:text="@string/crop_width"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/widthCropSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:progress="0"
            android:max="60"
            android:layout_weight="1"
            android:padding="@dimen/seekBarPadding"
            android:theme="@style/Widget.AppCompat.SeekBar.Discrete"/>

        <TextView
            android:id="@+id/widthCropAmount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
            android:text="100%"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
        android:textColor="@color/white"
        android:text="@string/crop_height"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/heightCropSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:progress="0"
            android:max="60"
            android:layout_weight="1"
            android:padding="@dimen/seekBarPadding"
            android:theme="@style/Widget.AppCompat.SeekBar.Discrete"/>

        <TextView
            android:id="@+id/heightCropAmount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
            android:text="100%"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
        android:text="Presets"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/preset4K"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/MotionCam.TextAppearance.Small"
            android:layout_weight="1"
            android:background="@drawable/selectable_text"
            android:padding="5dp"
            android:gravity="center"
            android:text="4K"/>

        <TextView
            android:id="@+id/preset1080P"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/MotionCam.TextAppearance.Small"
            android:layout_weight="1"
            android:background="@drawable/selectable_text"
            android:padding="5dp"
            android:gravity="center"
            android:text="1080P"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/MotionCam.TextAppearance.Small.Bold"
        android:layout_marginTop="10dp"
        android:text="@string/audio_input"/>

    <RadioGroup
        android:id="@+id/audioInputGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </RadioGroup>

</LinearLayout>